# fermi

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bench.sh  fermi  test.sh
.agents/memory/: MEMORY.md  MEMORY.md.bak  fermi-codegen-bugs.md
runtime/: fermi_rt.c  fermi_rt.h
src/: main.c
src/fearena/: arena.c  arena.h
src/fecodegen/: codegen.c  codegen.h  fir.c
src/fellvm/: llvm_emit.c  llvm_emit.h
src/feopt/: opt.c
src/feparser/: parser.c  parser.h
src/fermi/: fermi.h
src/fesema/: sema.c  sema.h
src/fetc/: tc.c  tc.h
tests/: run_tests.sh  t12_region.fe  t18_region2.fe  t21_intrinsics.fe  t8_math.fe
